Add more basic labels.

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 <div>
     <p id="urlDisplay" style="display: none">Share this link (keep this tab open) to test your peer-to-peer latency: <a id="shareUrl"/></p><span id="display"></span>
     <br />
-    <span id="display"></span>
+    <span id="latency"></span>
 </div>
 <script src="app.js"></script>
 </body>
