Add promp to click the button

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     </button>
 </div>
 <div>
-    <p id="urlDisplay" style="display: none">Share this link (keep this tab open) to test your peer-to-peer latency: <a id="shareUrl"/></p><span id="display"></span>
+    <p id="urlDisplay" >Click the button bove to get a share link.<a id="shareUrl"/></p><span id="display"></span>
     <br />
     <span id="latency"></span>
 </div>
