Add a "copy URL" button.

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,10 @@
         </button>
     </div>
     <div>
-        <p id="urlDisplay">Click the button above to get a share link.<a id="shareUrl" /></p><span id="display"></span>
+        <p id="userPrompt">Click the button above to get a share link.</p>
+        <button id="copyBtn" style="display:none">Copy Url</button>
+        <p id="urlDisplay" style="display:inline-block"></p>
+        <p id="copyDisplay"></p>
         <br />
         <span id="latency"></span>
     </div>
