--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     </div>
     <div class="container">
         <p id="userPrompt">Initializing...</p>
-        <button id="copyBtn" style="display:none">Copy Url</button>
+        <button id="copyBtn" class="btn btn-outline-dark" style="display:none">Copy Link</button>
         <p id="urlDisplay" style="display:inline-block"></p>
         <p id="copyDisplay"></p>
         <br />
