--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,7 @@
 
     <div class="d-flex flex-column h-100 text-center">
         <div class="container">
-            <h1>P2Ping</h1>
-
+            <h1>P2Ping<span id="betaTag">Beta</span></h1>
             <p id="userPrompt">Initializing...</p>
             <button id="copyBtn" class="btn btn-outline-dark" style="display:none">Copy Link</button>
             <p id="urlDisplay" style="display:inline-block"></p>
